[package]
name = "wizzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable = "0.10.0"
walkdir = "2.4.0"
clap = { version = "4.4.11", features = ["derive"] }
rayon = "1.8.0"

[dev-dependencies]
assert_cmd = "2.0"
